Cleaned up code. Added all Mob/Animal entities